:bug: fix usertyping input overlap

--- a/discord-inspired-bits-dark.user.css
+++ b/discord-inspired-bits-dark.user.css
@@ -51,10 +51,6 @@ EOT;
     	height: 35px !important;
     	padding-bottom: 0px !important;
 	}
-	.channelTextArea-rNsIhG {
-    	margin-bottom: 15px !important;
-    	padding-top: 15px !important;
-	}
 	.emojiButton-2wRZts {
 		top: 13px !important;
 	}
